--- a/changes
+++ b/changes
@@ -1,3 +1,5 @@
+1.1-6: faster great circle distance function
+
 1.1-5: Some minor changes to three plotting functions
 
 1.1-4: The auxcilliary function cor2() was changed
